--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -13,7 +13,7 @@ jobs:
         uses: openapi-generators/openapitools-generator-action@v1
         with:
           generator: ruby
-          command-args: -o gems/clerk-backend --api-name-suffix=' '
+          command-args: --api-name-suffix=' '
           config-file: sdk-generator-config.json
           openapi-file: resources/oas/bapi-2024-10-01.yml
           # openapi-url: https://raw.githubusercontent.com/clerk/openapi-specs/refs/heads/main/bapi/2024-10-01.yml
