chore: Update generators

--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -55,8 +55,8 @@ jobs:
           generator: ruby
           command-args: -o out --api-name-suffix=' '
           config-file: out/sdk-generator-config.json
-          openapi-file: out/resources/oas/bapi-2024-10-01.yml
-          # openapi-url: https://raw.githubusercontent.com/clerk/openapi-specs/refs/heads/main/bapi/2024-10-01.yml
+          # openapi-file: out/resources/oas/bapi-2024-10-01.yml
+          openapi-url: https://raw.githubusercontent.com/clerk/openapi-specs/refs/heads/main/bapi/2024-10-01.yml
           template-dir: out/resources/templates
 
       - name: Move generated files to root
