--- a/sdk-generator-config.json
+++ b/sdk-generator-config.json
@@ -1,18 +1,18 @@
 {
   "input": "https://raw.githubusercontent.com/clerk/openapi-specs/refs/heads/main/bapi/2024-10-01.yml",
   "remove-operation-id-prefix": true,
-  "model-package": "ClerkBackend",
+  "model-package": "ClerkHttpClient",
   "skipFormModel": true,
   "apiTests": false,
   "modelTests": false,
-  "templateDir": "out/resources/templates",
+  "templateDir": "resources/templates",
   "generateAliasAsModel": true,
   "verbose": false,
   "additionalProperties": {
     "debugOperations": true,
     "library": "faraday",
     "gemHomepage": "https://clerk.com/docs/references/ruby/overview",
-    "gemName": "clerk-sdk-ruby-backend",
-    "moduleName": "ClerkBackend"
+    "gemName": "clerk-http-client-ruby",
+    "moduleName": "ClerkHttpClient"
   }
 }
