--- a/pom.xml
+++ b/pom.xml
@@ -8,22 +8,16 @@
     <artifactId>custom-openapi-generator</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <openapi-generator.version>7.3.0</openapi-generator.version>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.openapitools</groupId>
             <artifactId>openapi-generator</artifactId>
-            <version>${openapi-generator.version}</version>
+            <version>7.9.0</version>
         </dependency>
         <dependency>
             <groupId>org.openapitools</groupId>
             <artifactId>openapi-generator-cli</artifactId>
-            <version>${openapi-generator.version}</version>
+            <version>7.9.0</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -40,8 +34,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>${maven.compiler.source}</source>
-                    <target>${maven.compiler.target}</target>
+                    <release>11</release>
                 </configuration>
             </plugin>
             <plugin>
