--- a/pom.xml
+++ b/pom.xml
@@ -8,16 +8,21 @@
     <artifactId>custom-openapi-generator</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <maven.compiler.release>11</maven.compiler.release>
+        <openapi-generator.version>7.9.0</openapi-generator.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.openapitools</groupId>
             <artifactId>openapi-generator</artifactId>
-            <version>7.9.0</version>
+            <version>${openapi-generator.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openapitools</groupId>
             <artifactId>openapi-generator-cli</artifactId>
-            <version>7.9.0</version>
+            <version>${openapi-generator.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -34,7 +39,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <release>11</release>
+                    <release>${maven.compiler.release}</release>
                 </configuration>
             </plugin>
             <plugin>
